feat(phase5): Phase 4.x 遗留 + Phase 5 未完成 — 6 项修复
Phase 4.x 遗留:
- #7 autoArchiveThreads @Scheduled 每小时归档 24h 无活动 Thread
- #8 Reaction 残留 — SearchServiceImpl + ThreadServiceImpl 批量查 Reaction
- @EnableScheduling 启动类已添加

Phase 5 未完成:
- #9 NettyWebSocketServerHandler 路由 TYPING_START(9) / TYPING_STOP(10)
- #10 WebSocketService.handleTypingStart/Stop 实现 → pushToChannel/Thread
- #11 MEMBER_ONLINE/OFFLINE — loginSuccess 广播上线, removed 广播离线
- #12 WSAdapter 补充 10 个 build 方法 (TypingStop/Online/Offline/Delete/Update/ReactionRemove/ThreadCreate/MemberJoin/Leave/ChannelCRUD/ServerUpdate)

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>